# vissl

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  NOTICE  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yaml
apptainer/: vissl-arm64.def  vissl-rocm.def  vissl.def
configs/config/: dataset_catalog.json  local.yaml  remote.yaml
configs/config/debugging/: README.md
configs/config/pretrain/dino/: dino_64gpus_deits8.yaml
docker/: vissl-rocm.Dockerfile  vissl.Dockerfile
extra_scripts/: convert_folder_to_filelist.py
mlflow/deepclusterv2/: MLproject  README.md  jube.yaml  run.sbatch  unicore-config.yaml
tests/: test_extract_cluster.py  test_extract_features.py  test_extract_features_utils.py  test_layer_memory_tracking.py  test_meter_accuracy.py  test_meter_precision.py  test_meter_recall.py  test_regnet_fsdp_integration.py
tests/test_data/deepclusterv2/train/: pl_2017-01-01T00:00_level_500_t_z_h_spd.tif  pl_2017-01-02T00:00_level_500_t_z_h_spd.tif
tests/unit/losses/: test_deepclusterv2_loss.py
tests/unit/plotting/deepclusterv2/: test_assignments.py  test_embedding.py
tools/: cluster_features_and_label.py  instance_retrieval_test.py
vissl/: __init__.py
vissl/data/: __init__.py  data_helper.py  disk_dataset.py
vissl/data/ssl_transforms/: ssl_transforms_wrapper.py
vissl/engines/: train.py
vissl/hooks/: log_hooks.py  tensorboard_hook.py
vissl/losses/: deepclusterv2_loss.py  multicrop_simclr_info_nce_loss.py  nce_loss.py  swav_loss.py  swav_momentum_loss.py
vissl/meters/: accuracy_list_meter.py
vissl/models/: model_helpers.py
vissl/models/trunks/: alexnet_deepcluster.py  resnext.py  vision_transformer.py  xcit.py
vissl/optimizers/: larc_fsdp.py  optimizer_helper.py
vissl/plotting/: __init__.py
vissl/plotting/deepclusterv2/: __init__.py  _colors.py  assignments.py  embeddings.py
vissl/trainer/: train_task.py  trainer_main.py
vissl/trainer/train_steps/: standard_train_step.py
vissl/utils/: activation_statistics.py  checkpoint.py  distributed_launcher.py  download.py  hydra_config.py  io.py  logger.py  mantik.py  misc.py
vissl/utils/instance_retrieval_utils/: data_util.py
website/: siteConfig.js
